2007-04-24  Ludwig Reiter  <ludwig.reiter@intevation.de>
	
	Print Border View installed.

	* src/de/intevation/printlayout/tools/PrintBorderOverlay.java:
		Added. Overlay for the print border.
	
	* src/de/intevation/printlayout/DocumentManager.java:
		Printing uses a pageFormat with changed
		ImageableArea.
	
	* src/de/intevation/printlayout/LayoutFrame.java:
		Added a new Show Border action in view menu and
		new options to the options dialog.
		Observes the preferences and change the border, if
		needed.
	
	* src/de/intevation/printlayout/Options.java:
		With a PreferenceChangeListener you can observe
		the preferences.

	* src/de/intevation/printlayout/i18n/messages_de.properties,
	  src/de/intevation/printlayout/i18n/messages.properties:
	  	Added labels for the border options and the show border
		action.

2007-04-21  Sascha Teichmann  <sascha.teichmann@intevation.de>

	Help for options dialog.

	* src/de/intevation/printlayout/LayoutFrame.java:
		When opening the options dialog give name of help resource.

	* src/de/intevation/printlayout/i18n/messages.properties,
	src/de/intevation/printlayout/i18n/messages_de.properties:
		Added message for help button in options dialog. Improved
		some messages.

	* src/de/intevation/printlayout/resources/options_help.html,
		src/de/intevation/printlayout/resources/options_help_de.html:
		New. English and german text of the help for the options dialog.

	* src/de/intevation/printlayout/ui/InfoDialog.java:	
		Embed JEditorPane in a JScrollPane to make info or help texts
		scrollable.

	* src/de/intevation/printlayout/ui/OptionDialog.java:
		Added a help button.

2007-04-20  Sascha Teichmann  <sascha.teichmann@intevation.de>

	- Added option to turn on/off map simplification via option dialog.
	- Readded the jump/* files to bring CVS back to sanity.

	* src/de/intevation/printlayout/ui/OptionDialog.java:
		Use pack() to finish layout.

	* src/de/intevation/printlayout/LayoutFrame.java: